# fmi_rs

./: Cargo.toml  LICENSE  README.md  build_and_package.sh  build_fmus.sh  package_all.sh  package_fmu2.sh  package_fmu3.sh
add_fmu/: Cargo.toml  (+2 more)
examples/: Cargo.toml
examples/add/: Cargo.toml  build.py  modelDescription.xml
examples/add/src/: lib.rs
examples/add_fmi2/: Cargo.toml  modelDescription.xml  package.sh
examples/add_fmi2/src/: lib.rs
examples/add_fmi3/: Cargo.toml  modelDescription.xml  package.sh
examples/add_fmi3/src/: lib.rs
examples/add_thread/: Cargo.toml  modelDescription.xml  package.sh
examples/add_thread/src/: lib.rs
examples/bouncing_ball/: Cargo.toml  README.md  build.py  modelDescription.xml
examples/bouncing_ball/src/: lib.rs
examples/counter/: Cargo.toml  modelDescription.xml
examples/counter/src/: lib.rs
examples/license_check/: Cargo.toml  README.md  build.py  modelDescription.xml
examples/license_check/src/: lib.rs
examples/mul/: Cargo.toml  build.py  modelDescription.xml
examples/multiplier/: Cargo.toml  README.md  modelDescription.xml
examples/multiplier/src/: lib.rs
examples/spring_mass_damper/: Cargo.toml  README.md  build.py  katex-header.html  modelDescription.xml  package.sh
examples/spring_mass_damper/.cargo/: config.toml
examples/spring_mass_damper/src/: lib.rs
examples/sub/: Cargo.toml  README.md  build.py  modelDescription.xml
examples/sub/src/: lib.rs
examples/sub/sub/: Cargo.toml
examples/sub/xtask/src/: main.rs
examples/xtask/: Cargo.toml
examples/xtask/src/: main.rs
(+34 files in other folders)
